Fixed Hamburger Scrolling on Mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -233,7 +233,8 @@ h3 {
 
 .hamburger {
   display: block;
-  position: relative;
+  position: fixed;
+  right: 1em;
 }
 
 .hamburger,
